--- a/src/s2-homeworks/hw05/header/Header.module.css
+++ b/src/s2-homeworks/hw05/header/Header.module.css
@@ -1,7 +1,15 @@
 .burgerMenuIcon {
+
 }
 
 .header {
+    display: flex;
+    justify-content: space-between;
+    width: 1280px;
+    height: 60px;
+    flex-shrink: 0;
+    background: #FFF;
+    box-shadow: 0px 0px 2px 0px rgba(29, 33, 38, 0.10), 0px 0px 40px 0px rgba(29, 33, 38, 0.13);
 }
 
 .header h1 {
