--- a/src/s2-homeworks/hw07/HW7.module.css
+++ b/src/s2-homeworks/hw07/HW7.module.css
@@ -1,2 +1,10 @@
+
 .container {
+    display: flex;
+    flex-direction: row;
+
+
+    gap: 100px;
+    margin-left: 70px;
+    margin-top: 50px;
 }
